# sammyai

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE.md  MANIFEST.in  README.md  TESTING.md  api_key_manager.py  chat_panel.py  dark_theme.qss  docker-compose.yml  pyproject.toml  requirements.txt  sammyai.py  text_editor.py
.github/workflows/: quality.yml
documentation/1_WHAT_IS_SAMMYAI/: 0_Important_Notice_Before_You_Start.md  1_What_is_SammyAI.md  2_Cost_Privacy_and_Copyrights.md  3_Features.md  4_Supported_Formats.md
documentation/2_INSTALLATION/: 1_Start.md  2_From_Source.md  3_Docker.md
documentation/3_USER_GUIDE/: 1_Layout.md  2_LLM_Chat.md  3_RAG_Menu_Options.md  4_Context_Injection_Menu_Options.md  5_Diff_Edits_Menu_Options.md  6_LLM_Setup.md  7_API_Keys.md  7_LLM_Settings.md  7_Projects.md
documentation/4_AI_MODELS/: 0_Models_Overview.md  1_Gemma3:4b.md  2_Gemini-2.5-Flash.md  3_Kimi-K2:1T.md
editing/: __init__.py  change_set_viewer.py  change_sets.py  diff_viewer.py
llm/: chat_manager.py  client.py  dbe_system_prompt.py  prompt_layers.py  system_prompt.py
rag/: context_builder.py  embeddings.py  indexer.py  rag_system.py  retriever.py  vector_store.py
sammyai_core/: __init__.py  agent_workflows.py  bootstrap.py  context_engine.py  database.py  documents.py  file_tools.py  logging_config.py  memory.py  paths.py  projects.py  resources.py  tasks.py
tests/: conftest.py  test_rag_system.py
tests/rag_tests/: test_rag.py  (+5 more)
ui/: chat_panel.py  llm_settings.py  llm_setup.py  memory_management.py  project_explorer.py  rag_management.py
(+54 files in other folders)
